Allow running both hibernate and EL tests